# LearnCMake

./: .gitignore  README.md
01-basic/A-hello-cmake/: CMakeLists.txt  main.cpp
01-basic/B-hello-headers/: 01-B.md  CMakeLists.txt
01-basic/B-hello-headers/src/: Hello.cpp  main.cpp
01-basic/C-static-library/: 01-C.md  CMakeLists.txt
01-basic/C-static-library/src/: Hello.cpp  main.cpp
01-basic/D-shared-library/: CMakeLists.txt
01-basic/D-shared-library/src/: Hello.cpp
01-basic/E-installing/: CMakeLists.txt  content.txt
01-basic/E-installing/src/: Hello.cpp
01-basic/F-build-type/: CMakeLists.txt
01-basic/G-compile-flags/: CMakeLists.txt  lib.h  main.cpp
01-basic/H-third-party-library/: CMakeLists.txt
Notes/: 01-A.md  01-D.md  01-F.md
